# search_engine

./: .gitignore  CMakeLists.txt  README.md  config.json  converterjson.cpp  converterjson.h  invertedindex.cpp  invertedindex.h  main.cpp  requests.json  searchserver.cpp  searchserver.h  tests.cpp
resorces/: file009.txt  resorces.7z
